<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserActivity" >

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="0dip" >
           
        <!--  The child Views/Layout to flip -->
       
        <!--  Layout 1 for 1st Screen -->
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >
		
				   <TextView
				       android:id="@+id/textView1"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_alignParentLeft="true"
				       android:layout_alignParentRight="true"
				       android:layout_alignParentTop="true"
				       android:text="@string/gameInfo" />
				
				   <TextView
				       android:id="@+id/textView4"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_alignLeft="@+id/textView3"
				       android:layout_below="@+id/textView3" 
				       android:text="@string/loading"/>
				   
				   <TextView
				       android:id="@+id/textView3"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_alignParentLeft="true"
				       android:layout_centerVertical="true"
				       android:text="@string/playerInfo" />
				
				   <TextView
				       android:id="@+id/textView2"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_alignLeft="@+id/textView1"
				       android:layout_below="@+id/textView1" 
				       android:text="@string/loading"/>

                   
            </RelativeLayout>
           
             <!--  Layout 2 for 2nd Screen -->
           
           	<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical">
			
				<ListView android:id="@android:id/list"
				          android:layout_height="0dip"
				          android:layout_width="match_parent"
				          android:layout_weight="1" />
	
				<Button android:id="@+id/voteButton" 
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				
			</LinearLayout>
           
           
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

				    <ImageView
				        android:id="@+id/imageView1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_centerHorizontal="true"
				        android:layout_alignParentTop="true"
				        android:contentDescription="@string/werewolf"
				        android:src="@drawable/werewolf" />
				
				    <ProgressBar
				        android:id="@+id/progressBar1"
				        style="?android:attr/progressBarStyleLarge"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/imageView1"
				        android:layout_centerHorizontal="true"
				        android:progress="60" />
				
				    <TextView
				        android:id="@+id/overviewGameSum"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_below="@+id/progressBar1"
				        android:text="@string/loading" />
				    
            </RelativeLayout>
            


        </ViewFlipper>
</LinearLayout>
